<resources>
    <string name="app_name">Cniaotuan</string>
    <string name="add_tag">Add Tag</string>

    <!-- MainActivity -->
    <string name="home">首页</string>
    <string name="groupbuy">周边</string>
    <string name="my">我的天天</string>
    <string name="more">更多</string>
    <!-- 首页 -->
    <string name="search_edittext_hint">请输入商品名、品类或商圈...</string>
    <string name="home_recommend_lable">猜你喜欢</string>
    <string name="hot_film">热映影片</string>
    <string name="all_film">全部影片</string>

    <!-- 登录界面 -->
    <string name="login">登录</string>
    <string name="register">快速注册</string>
    <string name="uname_hint">用户名/邮箱/手机号</string>
    <string name="pword_hint">密码</string>
    <string name="check_code_hint">验证码</string>
    <string name="union_login">第三方登录</string>
    <!-- 注册界面 -->
    <string name="login_hint">登录密码为6位以上数字和字母的组合，区分大小写</string>
    <string name="wangjimima">忘记密码？</string>
    <string name="kuaisuzhuce">快速注册</string>
    <string name="weibo">微博</string>
    <string name="weixin">微信</string>
    <string name="qq">QQ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
